// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`schema for almostEligible1 1`] = `
{
  "caseNotes": {},
  "eligibleCriteria": {
    "usMiInSolitaryConfinementAtLeastSixMonths": {
      "eligibleDate": 2021-10-27T00:00:00.000Z,
    },
  },
  "externalId": "RES021",
  "formInformation": {
    "STG": "2",
    "adSegStaysAndReasonsWithin3Yrs": [
      "(2022-11-07,003,)",
    ],
    "bondableOffensesWithin6Months": "(020, 2024-02-26)",
    "facility": "FACILITY2",
    "lock": "LOCKID3",
    "maxReleaseDate": 2024-06-16T00:00:00.000Z,
    "minReleaseDate": 2023-03-16T00:00:00.000Z,
    "nonbondableOffensesWithin1Year": "(008, 2023-05-31)",
    "prisonerName": "Third Resident",
    "prisonerNumber": "RES021",
    "segregationClassificationDate": 2021-10-27T00:00:00.000Z,
    "segregationType": "TEMPORARY_SOLITARY_CONFINEMENT",
  },
  "ineligibleCriteria": {
    "usMiPastWardenInPersonReviewForSccDate": {
      "latestWardenInPersonSccReviewDate": null,
      "nextSccDate": 2021-12-18T00:00:00.000Z,
      "solitaryStartDate": 2021-11-16T00:00:00.000Z,
    },
  },
  "isAlmostEligible": true,
  "isEligible": false,
  "isOverdue": false,
  "metadata": {
    "adSegStaysAndReasonsWithin3Yrs": [
      "(2022-11-07,003,)",
    ],
    "daysInCollapsedSolitarySession": 30,
    "lessThan24MonthsFromErd": false,
    "neededProgramming": "105",
    "recentBondableOffenses": "(020, 2024-02-26)",
    "recentNonbondableOffenses": "(008, 2023-05-31)",
  },
  "stateCode": "US_MI",
}
`;

exports[`schema for almostEligible2 1`] = `
{
  "caseNotes": {},
  "eligibleCriteria": {
    "usMiPastWardenInPersonReviewForSccDate": {
      "latestWardenInPersonSccReviewDate": null,
      "nextSccDate": 2021-12-18T00:00:00.000Z,
      "solitaryStartDate": 2021-11-16T00:00:00.000Z,
    },
  },
  "externalId": "RES022",
  "formInformation": {
    "STG": "2",
    "adSegStaysAndReasonsWithin3Yrs": [
      "(2022-11-07,003,)",
    ],
    "bondableOffensesWithin6Months": "(020, 2024-02-26)",
    "facility": "FACILITY2",
    "lock": "LOCKID3",
    "maxReleaseDate": 2024-06-16T00:00:00.000Z,
    "minReleaseDate": 2023-03-16T00:00:00.000Z,
    "nonbondableOffensesWithin1Year": "(008, 2023-05-31)",
    "prisonerName": "Third Resident",
    "prisonerNumber": "RES021",
    "segregationClassificationDate": 2021-10-27T00:00:00.000Z,
    "segregationType": "TEMPORARY_SOLITARY_CONFINEMENT",
  },
  "ineligibleCriteria": {
    "usMiInSolitaryConfinementAtLeastSixMonths": {
      "eligibleDate": 2021-12-22T00:00:00.000Z,
    },
  },
  "isAlmostEligible": true,
  "isEligible": false,
  "isOverdue": false,
  "metadata": {
    "adSegStaysAndReasonsWithin3Yrs": [
      "(2022-11-07,003,)",
    ],
    "daysInCollapsedSolitarySession": 30,
    "lessThan24MonthsFromErd": false,
    "neededProgramming": "105",
    "recentBondableOffenses": "(020, 2024-02-26)",
    "recentNonbondableOffenses": "(008, 2023-05-31)",
  },
  "stateCode": "US_MI",
}
`;

exports[`schema for fullyEligible1 1`] = `
{
  "caseNotes": {},
  "eligibleCriteria": {
    "usMiInSolitaryConfinementAtLeastSixMonths": {
      "eligibleDate": 2021-11-26T00:00:00.000Z,
    },
    "usMiPastWardenInPersonReviewForSccDate": {
      "latestWardenInPersonSccReviewDate": 2021-12-01T00:00:00.000Z,
      "nextSccDate": 2021-12-21T00:00:00.000Z,
      "solitaryStartDate": 2021-11-26T00:00:00.000Z,
    },
  },
  "externalId": "RES019",
  "formInformation": {
    "STG": "1",
    "adSegStaysAndReasonsWithin3Yrs": [
      "(2021-11-03,014,)",
      "(2022-03-02,014,)",
      "(2021-08-02,030,)",
      "(2023-10-12,003,014,029,)",
      "(2022-05-16,014,)",
      "(2022-04-30,012,)",
    ],
    "bondableOffensesWithin6Months": "(423, 2023-12-27)",
    "facility": "FACILITY1",
    "lock": "LOCKID1",
    "maxReleaseDate": 2023-08-16T00:00:00.000Z,
    "minReleaseDate": 2022-10-16T00:00:00.000Z,
    "nonbondableOffensesWithin1Year": "(008, 2023-05-31)",
    "prisonerName": "First Resident",
    "prisonerNumber": "RES019",
    "segregationClassificationDate": 2021-11-26T00:00:00.000Z,
    "segregationType": "ADMINISTRATIVE_SOLITARY_CONFINEMENT",
  },
  "ineligibleCriteria": {},
  "isAlmostEligible": false,
  "isEligible": true,
  "isOverdue": true,
  "metadata": {
    "adSegStaysAndReasonsWithin3Yrs": [
      "(2021-11-03,014,)",
      "(2022-03-02,014,)",
      "(2021-08-02,030,)",
      "(2023-10-12,003,014,029,)",
      "(2022-05-16,014,)",
      "(2022-04-30,012,)",
    ],
    "completedProgramming": "105",
    "daysInCollapsedSolitarySession": 25,
    "neededProgramming": "101",
    "recentBondableOffenses": "(423, 2023-12-27)",
    "recentNonbondableOffenses": "(008, 2023-05-31)",
  },
  "stateCode": "US_MI",
}
`;

exports[`schema for fullyEligible2 1`] = `
{
  "caseNotes": {},
  "eligibleCriteria": {
    "usMiInSolitaryConfinementAtLeastSixMonths": {
      "eligibleDate": 2021-10-27T00:00:00.000Z,
    },
    "usMiPastWardenInPersonReviewForSccDate": {
      "latestWardenInPersonSccReviewDate": null,
      "nextSccDate": 2021-12-18T00:00:00.000Z,
      "solitaryStartDate": 2021-11-16T00:00:00.000Z,
    },
  },
  "externalId": "RES020",
  "formInformation": {
    "STG": "2",
    "adSegStaysAndReasonsWithin3Yrs": [],
    "bondableOffensesWithin6Months": "(020, 2024-02-26), (057, 2023-12-05), (057, 2024-01-31)",
    "facility": "FACILITY2",
    "lock": "LOCKID2",
    "maxReleaseDate": 2024-06-16T00:00:00.000Z,
    "minReleaseDate": 2022-05-16T00:00:00.000Z,
    "nonbondableOffensesWithin1Year": "(008, 2023-05-31)",
    "prisonerName": "Second Resident",
    "prisonerNumber": "RES020",
    "segregationClassificationDate": 2021-10-27T00:00:00.000Z,
    "segregationType": "TEMPORARY_SOLITARY_CONFINEMENT",
  },
  "ineligibleCriteria": {},
  "isAlmostEligible": false,
  "isEligible": true,
  "isOverdue": false,
  "metadata": {
    "adSegStaysAndReasonsWithin3Yrs": [],
    "daysInCollapsedSolitarySession": 50,
    "lessThan24MonthsFromErd": true,
    "neededProgramming": "101",
    "recentBondableOffenses": "(020, 2024-02-26), (057, 2023-12-05), (057, 2024-01-31)",
    "recentNonbondableOffenses": "(008, 2023-05-31)",
  },
  "stateCode": "US_MI",
}
`;
